--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 version: '3.7'
 services:
-  mysql:
-    image: mysql:8.0.19
-    ports:
-      - '3306:3306'
+  db:
+    container_name: app_db
+    image: postgres:9.5
     volumes:
-      - ./data:/var/lib/mysql
+      - sample_db:/var/lib/postgresql/data
     environment:
-      - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_DATABASE=app
-      - MYSQL_USER=app
-      - MYSQL_PASSWORD=pass
+      - POSTGRES_PASSWORD=pass
+      - POSTGRES_USER=app
+      - POSTGRES_DB=app
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - 5432:5432
+
+volumes:
+  sample_db: {}
